--- a/iam-proxy-italia-project/static/disco.html
+++ b/iam-proxy-italia-project/static/disco.html
@@ -13,6 +13,9 @@
   <!-- ita-bayon CSS -->
   <link href="/static/css/ita.min.css" rel="stylesheet">
 
+  <script src="https://cdn.jsdelivr.net/npm/i18next-http-backend@1.3.1/i18nextHttpBackend.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/i18next@25.5.2/i18next.min.js"></script>
+
   <style>
     .wallet-box a:hover {
       background-color: #f0f8ff;
@@ -38,8 +41,8 @@
         <!-- Dropdown language -->
         <div>
           <select id="lang-select" class="form-select form-select-sm text-white" style="background-color: #0072CE">
-            <option value="ita" selected>ITA</option>
-            <option value="en">EN</option>
+            <option value="en" selected>EN</option>
+            <option value="it">ITA</option>
           </select>
         </div>
       </div>
@@ -64,6 +67,6 @@
   </div>
 </main>
 
-<script src="js/wallets.js"></script>
+<script type="module" src="js/wallets.js"></script>
 </body>
 </html>
