--- a/iam-proxy-italia-project/static/disco.html
+++ b/iam-proxy-italia-project/static/disco.html
@@ -15,6 +15,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/i18next-http-backend@1.3.1/i18nextHttpBackend.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/i18next@25.5.2/i18next.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
   <style>
     html, body {
@@ -86,6 +87,7 @@
 <!-- SEZIONE LOGIN -->
 <main class="container my-4">
   <div class="row" id="wallets-container">
+    <script src="spid/spid_button.js"></script>
     <script type="module" src="js/wallets.js"></script>
   </div>
 </main>
