--- a/iam-proxy-italia-project/static/disco.html
+++ b/iam-proxy-italia-project/static/disco.html
@@ -59,9 +59,9 @@
     <div class="container">
       <div class="it-header-slim-wrapper-content">
         <!-- Brand reference -->
-        <a class="d-none d-lg-block navbar-brand text-white" href="/">
+        <span class="d-none d-lg-block navbar-brand text-white">
           <strong>Nome della Regione</strong>
-        </a>
+        </span>
         <!-- Dropdown language -->
         <div>
           <select id="lang-select" class="form-select form-select-sm text-white" style="background-color: #0072CE">
