--- a/iam-proxy-italia-project/static/disco.html
+++ b/iam-proxy-italia-project/static/disco.html
@@ -93,12 +93,12 @@
 </main>
 
 <!-- FOOTER -->
-<footer>
-  <div class="container">
-      <div>
-        <a href="" class="text-white me-4" target="_blank" rel="noopener">Legal notes</a>
-        <a href="" class="text-white me-4" target="_blank" rel="noopener">Privacy policy</a>
-        <a href="" class="text-white" target="_blank" rel="noopener">Accessibility statement</a>
+<footer class="w-100 fixed-bottom" style="background-color: #0072CE; color: white; height:56px;">
+  <div class="container h-100 d-flex align-items-center">
+    <div class="d-flex justify-content-start">
+      <a href="" class="text-white me-4" target="_blank" rel="noopener">Legal notes</a>
+      <a href="" class="text-white me-4" target="_blank" rel="noopener">Privacy policy</a>
+      <a href="" class="text-white" target="_blank" rel="noopener">Accessibility statement</a>
     </div>
   </div>
 </footer>
