feat: update UI templates, add i18n for login_logo (view: 220#discussion_r2387516591)

--- a/iam-proxy-italia-project/static/disco.html
+++ b/iam-proxy-italia-project/static/disco.html
@@ -78,7 +78,7 @@
         <svg class="icon icon-lg me-2" aria-hidden="true">
           <use xlink:href="/static/svg/sprites.svg#it-code-circle"></use>
         </svg>
-        <h2>Accedi con il tuo wallet digitale</h2>
+        <h2 id="wallet-title"></h2>
       </div>
     </div>
   </div>
