--- a/iam-proxy-italia-project/static/disco.html
+++ b/iam-proxy-italia-project/static/disco.html
@@ -96,9 +96,9 @@
 <footer class="w-100 fixed-bottom" style="background-color: #0072CE; color: white; height:56px;">
   <div class="container h-100 d-flex align-items-center">
     <div class="d-flex justify-content-start">
-      <a href="" class="text-white me-4" target="_blank" rel="noopener">Legal notes</a>
-      <a href="" class="text-white me-4" target="_blank" rel="noopener">Privacy policy</a>
-      <a href="" class="text-white" target="_blank" rel="noopener">Accessibility statement</a>
+      <a id="footer-legal" href="" class="text-white me-4" target="_blank" rel="noopener"></a>
+      <a id="footer-privacy" href="" class="text-white me-4" target="_blank" rel="noopener"></a>
+      <a id="footer-accessibility" href="" class="text-white" target="_blank" rel="noopener"></a>
     </div>
   </div>
 </footer>
