--- a/iam-proxy-italia-project/static/disco.html
+++ b/iam-proxy-italia-project/static/disco.html
@@ -51,6 +51,34 @@
       padding: 1rem 0;
       background-color: #0072CE;
       color: white;
+      position: relative;
+      width: 100%;
+      height: auto;
+    }
+
+    @media (max-width: 576px) {
+      .container {
+        padding-left: 8px !important;
+        padding-right: 8px !important;
+      }
+      header .it-header-slim-wrapper-content {
+        flex-direction: column !important;
+        align-items: flex-start !important;
+      }
+      #wallets-container .col-12 {
+        margin-bottom: 1rem;
+      }
+      .wallet-box {
+        padding: 1rem !important;
+        font-size: 1rem !important;
+      }
+      footer {
+        padding: 0.5rem 0;
+        font-size: 0.9rem;
+      }
+      #lang-select {
+        width: 100px;
+      }
     }
   </style>
 </head>
@@ -59,8 +87,7 @@
 <header class="it-header-wrapper">
   <div class="it-header-slim-wrapper bg-primary">
     <div class="container">
-      <div class="it-header-slim-wrapper-content">
-        <!-- Brand reference -->
+      <div class="it-header-slim-wrapper-content d-flex justify-content-between align-items-center">
         <span class="d-none d-lg-block navbar-brand text-white">
           <strong>Nome della Regione</strong>
         </span>
@@ -94,12 +121,12 @@
 </main>
 
 <!-- FOOTER -->
-<footer class="w-100 fixed-bottom" style="background-color: #0072CE; color: white; height:56px;">
+<footer>
   <div class="container h-100 d-flex align-items-center">
-    <div class="d-flex justify-content-start">
-      <a id="footer-legal" href="" class="text-white me-4" target="_blank" rel="noopener"></a>
-      <a id="footer-privacy" href="" class="text-white me-4" target="_blank" rel="noopener"></a>
-      <a id="footer-accessibility" href="" class="text-white" target="_blank" rel="noopener"></a>
+    <div class="d-flex flex-wrap justify-content-start">
+      <a id="footer-legal" href="" class="text-white me-4 mb-2" target="_blank" rel="noopener"></a>
+      <a id="footer-privacy" href="" class="text-white me-4 mb-2" target="_blank" rel="noopener"></a>
+      <a id="footer-accessibility" href="" class="text-white mb-2" target="_blank" rel="noopener"></a>
     </div>
   </div>
 </footer>
