feat: update UI templates, set page_title (view: 220/files#r2388071334)

--- a/iam-proxy-italia-project/static/disco.html
+++ b/iam-proxy-italia-project/static/disco.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Accedi</title>
-  <meta name="description" content="Accedi">
+  <title id="tab-title">Accedi</title>
+  <meta name="description" content="" id="tab-title">
 
   <link rel="stylesheet" href="/static/css/style.css">
 
