--- a/iam-proxy-italia-project/static/error_page.html
+++ b/iam-proxy-italia-project/static/error_page.html
@@ -41,7 +41,7 @@
                   <div class="it-brand-wrapper">
                     <a href="/">
                       <div class="col-10 col-md-12 offset-1 offset-md-0">
-                        <img src="spid/logo.jpg" style="width: 10%;">
+                        <img src="img/logo-it.png" style="width: 10%;">
                       </div>
                       <div class="it-brand-text">
                         <h2 class="no_toc">
@@ -174,7 +174,7 @@
               <div class="col-sm-12">
                 <div class="it-brand-wrapper">
                   <a href="#">
-                    <img class="icon" src="spid/logo.jpg">
+                    <img class="icon" src="img/logo-it.png">
                     <div class="it-brand-text">
                       <h2 class="no_toc">
                         Nome Organizzazione
